--- a/docs/style.css
+++ b/docs/style.css
@@ -86,7 +86,7 @@ body.wrong {
   padding: 1vw;
   font-size: 90%;
   padding: 0.5vw 0.5vw;
-  margin: 1vw;
+  margin: .5vw;
   color: white;
   outline: none;
 }
